<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoo" />


    <androidx.cardview.widget.CardView
        android:windowSoftInputMode="adjustResize"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:cardBackgroundColor="@color/bg_color_login"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="20dp"
       >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
           android:layout_marginLeft="20dp" >







            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/username"
                android:layout_below="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/username"
                android:hint="@string/prompt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_Password"
                android:layout_below="@id/password"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUp"
                android:layout_below="@id/confirm_Password"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"/>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/confirm_Password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/signUp"
                android:text="Already have an account? " />

        </RelativeLayout>
       </ScrollView>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_below="@id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <View
        android:id="@+id/divider2"
            android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight=".20"
        android:background="?android:attr/listDivider" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"></TextView>
        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".20"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</RelativeLayout>